# KnowledgeOS

./: .gitignore  AI提示词与任务模式流程草案.md  README.md  database_schema.md  knowledgeos_ai_dev_tasks.md  package.json  pnpm-lock.yaml  start-knowledgeos.cmd  tsconfig.base.json  产品需求prd.md  开发需求prd.md  笔记结构化大师.md  精准知识解析师.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_core.sql  0004_blocks_reader_state.sql  0006_search_fts.sql
apps/desktop/src-tauri/resources/migrations/: 0002_document_status_meta.sql  0003_document_hash_index.sql  0005_explain_templates_and_raw_json.sql  0007_studio_artifacts.sql
apps/desktop/src-tauri/resources/prompt-templates/: import_semantic_chunk_system.md  paper_block_explain_system.md  studio_mind_map_system.md  studio_presentation_outline_system.md  studio_presentation_system.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/ai/: mod.rs
apps/desktop/src-tauri/src/commands/: agent.rs  app.rs  block.rs  card.rs  explain.rs  graph.rs  import.rs  jobs.rs  mod.rs  project.rs  reader.rs  search.rs  studio.rs  window.rs
apps/desktop/src-tauri/src/config/: mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/fs/: mod.rs  sandbox.rs
apps/desktop/src-tauri/src/jobs/: mod.rs
apps/desktop/src-tauri/src/logging/: mod.rs
apps/desktop/src-tauri/src/services/: mod.rs
apps/desktop/src-tauri/src/sidecar/: mod.rs
apps/desktop/src-tauri/src/state/: mod.rs
(+77 files in other folders)
